loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:1: error: not found: value Var
Var nbPas = 0
^LoopFor:5: error: not found: value nbPas
  nbPas += 1;
  ^LoopFor:8: error: not found: value nbPas
for (n <- 0 to nbPas ) {
               ^