loopfor.LoopFor.scala.code
Var nbPas = 0

while (!estSurBiscuit()) {
  avance();
  nbPas += 1;
}
prendBiscuit();
for (n <- 0 to nbPas ) {
  recule();
}
poseBiscuit();